[package]
edition = "2021"
name = "summa-server"
version = "0.25.1"
license-file = "LICENSE"
description = "Fast full-text search server"
homepage = "https://github.com/izihawa/summa"
repository = "https://github.com/izihawa/summa"
keywords = ["async", "search", "server", "grpc"]

[lib]
name = "summa_server"
path = "src/lib.rs"
doc = false

[[bin]]
name = "summa-server-bin"
path = "src/bin/main.rs"
doc = false

[features]
default = ["kafka", "metrics"]
kafka = ["rdkafka"]
metrics = ["opentelemetry", "opentelemetry-prometheus", "prometheus", "summa-core/metrics"]

[badges]
maintenance = { status = "actively-developed" }

[dev-dependencies]
summa-core = { version = "0.25.1", path = "../summa-core", features = ["fs", "tokio-rt"] }
tempdir = "0.3.7"

[dependencies]
anyhow = { workspace = true }
async-broadcast = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
libz-sys = { workspace = true }
opentelemetry = { version = "0.20", features = ["metrics", "rt-tokio"], optional = true }
opentelemetry-prometheus = { version = "0.13", optional = true }
path-absolutize = "3.0"
prometheus = { version = "0.13", optional = true }
prost = { workspace = true }
rand = { workspace = true }
rdkafka = { version = "0.36.2", optional = true }
rlimit = "0.10"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
summa-core = { version = "0.25.1", path = "../summa-core", features = ["external-request", "fs", "tokio-rt"] }
summa-proto = { workspace = true, features = ["grpc"] }
tantivy = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
tonic-web = { version = "0.12" }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-futures = "0.2"
tracing-subscriber = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"
