[package]
name = "summa-wasm"
version = "0.133.3"
authors = ["Pasha Podolsky <ppodolsky@me.com>"]
edition = "2021"
license-file = "LICENSE"
description = "WASM bindings for Summa"
homepage = "https://github.com/izihawa/summa"
repository = "https://github.com/izihawa/summa"
readme = "README.md"
keywords = ["async", "search", "wasm", "web"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "crate/lib.rs"

[dependencies]
async-trait = { workspace = true }
console_error_panic_hook = "0.1.7"
futures = { workspace = true }
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
instant = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
strfmt = { workspace = true }
summa-core = { version = "0.22.3", path = "../summa-core", default_features = false }
summa-proto = { workspace = true }
tantivy = { workspace = true, features = ["wasm"] }
thiserror = { workspace = true }
tokio = { workspace = true, default_features = false, features = ["sync"] }
tracing = { workspace = true }
tracing-wasm = "0.2"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["console", "DedicatedWorkerGlobalScope", "WorkerOptions", "WorkerType"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-mutable-globals"]