[package]
name = "summa-wasm"
version = "0.136.4"
authors = ["Pasha Podolsky <ppodolsky@me.com>"]
edition = "2021"
license-file = "LICENSE"
description = "WASM bindings for Summa"
homepage = "https://github.com/izihawa/summa"
repository = "https://github.com/izihawa/summa"
readme = "README.md"
keywords = ["async", "search", "wasm", "web"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "crate/lib.rs"

[dependencies]
async-trait = { workspace = true }
console_error_panic_hook = "0.1.7"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
parking_lot = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
strfmt = { workspace = true }
summa-core = { version = "0.25.0", path = "../summa-core", default-features = false, features = ["tokio-rt"] }
summa-proto = { workspace = true }
tantivy = { workspace = true, features = ["wasm"] }
thiserror = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["sync"] }
tracing = { workspace = true }
tracing-wasm = "0.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["console", "DedicatedWorkerGlobalScope", "WorkerOptions", "WorkerType"] }
zstd-safe = "=7.0.0"
zstd-sys = "=2.0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.13.1", default-features = false, features = ["js"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-bulk-memory", "--enable-mutable-globals"]