[package]
name = "summa-proto"
version = "0.1.0"
authors = ["Pasha Podolsky <ppodolsky@me.com>"]
edition = "2021"

[lib]
name = "summa_proto"
path = "src/lib.rs"
doc = true

[features]
default = ["grpc"]
grpc = ["tonic", "tonic-reflection"]

[build-dependencies]
fs_extra = "1.2.0"
prost-build = { version = "0.11.0" }
tonic-build = { version = "0.8.0", default-features = false, features = ["prost", "transport"], optional = true }

[dependencies]
prost = "0.11.0"
prost-types = "0.11.0"
serde = "1.0.145"
tantivy = { git = "https://github.com/izihawa/tantivy", branch = "feature/seg-attr", default_features = false, features = ["quickwit", "zstd-compression"] }
thiserror = "1.0.36"
tonic = { version = "0.8.0", features = ["gzip"], optional = true }
tonic-reflection = { version = "0.5.0", optional = true }